--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "npm run config && ng build",
+    "build": "npm run configure && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "config": "node --env-file=.env scripts/set-env.js"
+    "configure": "node --env-file=.env scripts/set-env.js",
+    "deploy": "ng deploy"
   },
   "private": true,
   "dependencies": {
@@ -28,6 +29,7 @@
     "@angular/cli": "^19.0.7",
     "@angular/compiler-cli": "^19.0.0",
     "@types/jasmine": "~5.1.0",
+    "angular-cli-ghpages": "^2.0.3",
     "jasmine-core": "~5.4.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
