--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,6 +23,9 @@ jobs:
         run: npm install
 
       - name: Build
+        env:
+          API_KEY: ${{ secrets.API_KEY }}
+          OPEN_WEATHER_API: ${{ secrets.OPEN_WEATHER_API }}
         run: npm run build
 
       - name: Deploy
