--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run configure && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "configure": "node --env-file=.env scripts/set-env.js",
+    "configure": "node scripts/set-env.js",
     "deploy": "ng deploy"
   },
   "private": true,
