--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "configure": "node scripts/set-env.js",
-    "deploy": "ng deploy --repo=https://github.com/youjob13/weather-anywhere.git"
+    "deploy": "ng deploy"
+  },
+  "repository": {
+    "url": "https://github.com/youjob13/weather-anywhere.git"
   },
   "private": true,
   "dependencies": {
